# PokerOddCalc

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  main.c  pokerutil  test_shuffle.c
deck/: deck.c  deck.h
game/: game.c  game.h
src/controller/: request.c  request.h
src/deck/: deck.c  deck.h
src/game/: deck.c  deck.h  game.c  game.h
src/request/: request.c  request.h
src/simulation/: monte_carlo.c  monte_carlo.h
src/simulator/: monte_carlo.c
src/ui/: ui.c
src/utils/: datastructures.c
tests/: CMakeLists.txt  main_tests.c
tests/game/: deck.c  deck_test.c  deck_test.h  game_test.c  game_test.h
